# bot12

./: Pasted-import-logging-import-asyncio-from-aiogram-import-Bot-Dispatcher-types-from-aiogram-filters-import-1754750238476_1754750238479.txt  attached_assets  bot.py  config.py  database.py  document_processor.py  error_handler.py  feedbacks.txt  main.py  main_1755467628349.py  performance_monitor.py  pyproject.toml  regional_data.py  registration_data.json  registratsiya.txt  replit.md  requirements.txt  run.sh  statistics.json  tests.json.backup  users.txt  utils.py
attached_assets/: Alisa saralash_1755479331263.docx  BARON MYUNXAUZENNING SARGUZASHTLARI SARALASH _1755479331263.docx  GALAKTIKADA BIR KUN SARALASH_1755479331263.docx  Maugli saralash _1755479062254.docx  OLTIN BOLA SARALASH _1755479331263.docx  OQ KEMA SARALASH_1755479062255.docx  Pasted--Technical-Specification-for-Kitobxon-Kids-Telegram-Bot-Updated-General-Requirements-The-bot--1755462726792_1755462726792_1755467639384.txt  Pasted-Technical-Specification-Kitobxon-Kids-Telegram-Bot-Upgrade-Updated-Project-Goal-Enhance-the-exi-1755478274105_1755478274106.txt  Pasted-Technical-Specification-for-the-Development-and-Optimization-of-the-Telegram-Bot-This-project-requi-1755445536534_1755445536534.txt  Pasted-from-telegram-import-Update-ReplyKeyboardMarkup-ReplyKeyboardRemove-Sticker-from-telegram-ext-imp-1755478280402_1755478280402.txt  Pasted-import-logging-import-asyncio-from-aiogram-import-Bot-Dispatcher-F-from-aiogram-types-import--1755462668786_1755462668787_1755467639385.txt  admins_1754852847457.json  (+32 more)
(+7 files in other folders)
